--- a/play.html
+++ b/play.html
@@ -186,18 +186,18 @@
       <section class="game-rewards">
         <div id="rewards-display">
           <span>
-            <i id="perm-flag" class="fas fa-flag-checkered hide"></i>
-            <i id="perm-infinity" class="fas fa-infinity hide"></i>
-            <i id="perm-graduation" class="fas fa-graduation-cap hide"></i>
-            <i id="perm-university" class="fas fa-university hide"></i>
-            <i id="perm-atom" class="fas fa-atom hide"></i>
-            <i id="perm-flask" class="fas fa-flask hide"></i>
-            <i id="perm-brain" class="fas fa-brain hide"></i>
-            <i id="perm-robot" class="fas fa-robot hide"></i>
-            <i id="perm-trophy" class="fas fa-trophy hide"></i>
-            <i id="perm-hat" class="fas fa-hat-wizard hide"></i>
-            <i id="perm-gamepad" class="fas fa-gamepad hide"></i>
-            <i id="perm-astronaut" class="fas fa-user-astronaut hide"></i>
+            <i id="perm-flag" class="fas fa-flag-checkered hide" title="Volcano Apprentice achievements"></i>
+            <i id="perm-infinity" class="fas fa-infinity hide" title="Jungle Apprentice achievements"></i>
+            <i id="perm-graduation" class="fas fa-graduation-cap hide" title="Ocean Apprentice achievements"></i>
+            <i id="perm-university" class="fas fa-university hide" title="Earth Apprentice achievements"></i>
+            <i id="perm-atom" class="fas fa-atom hide" title="Volcano Scientist achievements"></i>
+            <i id="perm-flask" class="fas fa-flask hide" title="Jungle Scientist achievements"></i>
+            <i id="perm-brain" class="fas fa-brain hide" title="Ocean Scientist achievements"></i>
+            <i id="perm-robot" class="fas fa-robot hide"  title="Earth Scientist achievements"></i>
+            <i id="perm-trophy" class="fas fa-trophy hide" title="Volcano Genius achievements"></i>
+            <i id="perm-hat" class="fas fa-hat-wizard hide" title="Jungle Genius achievements"></i>
+            <i id="perm-gamepad" class="fas fa-gamepad hide" title="Ocean Genius achievements"></i>
+            <i id="perm-astronaut" class="fas fa-user-astronaut hide" title="Earth Genius achievements"></i>
           </span>
         </div>
       </section>
